feat : add field type to Template
